# prudii-app

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-07-06-github-auto-updates-design.md
scripts/: fix-appimage.sh  sync-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classify.rs  cleanup_guard.rs  connectivity.rs  credentials.rs  idle.rs  lib.rs  main.rs  notifications.rs  oauth.rs  pool.rs  rules.rs  task_registry.rs  window_geometry.rs
src-tauri/src/ai/: mod.rs  prompts.rs
src-tauri/src/commands/: accounts.rs  ai.rs  app_config.rs  backup.rs  connectivity.rs  license.rs  mails.rs  mailto.rs  mod.rs  rules.rs  send.rs  settings.rs  sync.rs  templates.rs  update.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/gmail/: api.rs  messages.rs  mod.rs  sync.rs
src-tauri/src/imap/: client.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/outlook/: api.rs  messages.rs  sync.rs
src-tauri/src/smtp/: attachment.rs  mod.rs
src/components/accounts/: AccountWizard.tsx  ProviderSelect.tsx  WelcomeScreen.tsx  WizardStepAuth.tsx  WizardStepDone.tsx  WizardStepProvider.tsx  WizardStepTesting.tsx
src/hooks/: useAccounts.ts  useAppConfig.ts  useAutoSync.ts  useConnectivity.ts  useScroller.ts  useSync.ts
src/lib/: achievements.ts  composeWindow.ts  dateUtils.ts  errorToast.ts  gradientFromEmail.ts  i18n.ts  imapErrorMap.ts  linkChecker.ts  mailLinkBridge.ts  mailtoParser.ts  platform.ts  providers.ts  recentCommands.ts  sanitize.ts  syncProgress.ts  tauri.ts  trackingParams.ts  updater.ts
src/locales/: de.json  en.json  es.json  fr.json  pt.json  ru.json  zh.json
src/stores/: appStore.ts
src/types/: index.ts
(+70 files in other folders)
